# array-binary-encoding

./: compare.py  pyproject.toml
