[tool.poetry]
name = "array-binary-encoding"
version = "0.1.0"
description = ""
authors = ["Reid Draper <reiddraper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
hypothesis = "^6.29.0"
ipython = "^7.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
